Stage 4: Добавлен функционал увеличения и уменьшения количества товаров в корзине.

--- a/src/components/BaksetItem/basketItem.scss
+++ b/src/components/BaksetItem/basketItem.scss
@@ -2,4 +2,9 @@
     &-delete {
         cursor: pointer;
     }
+    &-quantity {
+        cursor: pointer;
+        vertical-align: middle;
+        color: #26a69a;
+    }
 }
