--- a/src/components/BasketList/basketList.scss
+++ b/src/components/BasketList/basketList.scss
@@ -6,11 +6,23 @@
     background-color: white;
     width: 50rem;
     max-width: 95%;
+    animation: show 500ms ease-in-out;
     &-close {
         cursor: pointer;
         position: absolute;
         top: 0.5rem;
         right: 0.5rem;
         color: white;
+    }
+}
+
+@keyframes show {
+    from {
+        top: 70%;
+        opacity: 0;
+    }
+    to {
+        top: 50%;
+        opacity: 1;
     }
 }
